--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sand Box</title>
+    <title>About</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -17,16 +17,16 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-         
+
 </head>
 
 <body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Feria Graphix</h1>
-            <p class="lead">We are Feria Graphix</p>
-        </div>
+    <div class="container">
+        <h1 class="display-4">Feria Graphix</h1>
+        <p class="lead">We are Feria Graphix</p>
     </div>
+
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">FG</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -55,7 +55,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link disabled" href="about.html">About</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -64,69 +64,59 @@
             </form>
         </div>
     </nav>
-<!-- carousel -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-        </ol>
-        <!-- wrapper -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block " src="images/bird.jpg" alt="Bird"  width="460" height="345">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Bird</h5>
-                    <p>This is a bird</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="carousel-item">
-                <img class="d-block " src="images/cat.jpg" alt="cat"  width="460" height="345">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of
+                                the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+                </div>
             </div>
-
-            <div class="carousel-item">
-                <img class="d-block " src="images/chx.jpg" alt="chicken"  width="460" height="345">
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block " src="images/eagle.jpg" alt="eagle"  width="460" height="345">
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block " src="images/fish.jpg" alt="fish"  width="460" height="345">
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
     </div>
 
-    <footer>
-        <div class="footer is-centered">
-            <p>test test 123</p>
+    <!-- contact form -->
+    <form id="contactForm">
+        <h5 class="is-centered">Contact Us</h5>
+        <input type="text" placeholder="Name"/>
+        <br>
+        <input type="email" placeholder="feria@photography.com"/>
+        <br>
+        <input type="button" value="submit"/>
+
+
         </div>
-    </footer>
-
-
-
-
-
-
-
+    </form>
+    </div>
 </body>
-<script>
-
-</script>
 
 </html>
