--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
 </head>
 
 <body>
-<!-- header -->
-    <nav class="navbar fixed-top navbar-light">
-        <span class="navbar-text">
+    <!-- header -->
+    <nav class="navbar fixed-top navbar-light shadow-sm p-3 mb-5 bg-white rounded text-muted">
+        <span class="h3 navbar-text">
             Dillon Reinwald
         </span>
+        <span class="h6 navbar-text text-right">
+            (949)923-8758
+            |
+            dreinwaldmail@gmail.com
+        </span>
+
     </nav>
-<!-- navbar list -->
+    <!-- navbar list -->
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a data-toggle="modal" href="#aboutMe">About Me</a></li>
         <li><a data-toggle="modal" href="#education">Education</a></li>
         <li><a data-toggle="modal" href="#experience">Experience</a></li>
 
-    </ul>s
-<!-- about me modal -->
+    </ul>
+    <!-- about me modal -->
     <div class="modal fade" id="aboutMe" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -48,7 +54,7 @@
             </div>
         </div>
     </div>
-<!-- education modal -->
+    <!-- education modal -->
     <div class="modal fade" id="education" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -60,15 +66,78 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Education list
+                    <div class="container">
+                        <div class="row card">
+                            <div class="col card-body">
+                                <h5 class="card-title">University of California, Irvine</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Certificate | 2018</h6>
+                                <p class="card-text">Full-Stack Web Development</p>
+                            </div>
+                        </div>
+                        <div class="row card">
+                            <div class="col card-body">
+                                <h5 class="card-title">University of Colorado, Boulder</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Computer Science Major | 2012-2015</h6>
+                                <p class="card-text">Chi Psi Fraternity; Greek Week Chair 2015</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    certificate information
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+
+                            </div>
+                            <div class="col align-middle">
+                                <iframe frameborder="0" scrolling="no"
+                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438213" width="180"
+                                    height="230"></iframe>
+                                <iframe frameborder="0" scrolling="no"
+                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438229" width="180"
+                                    height="230"></iframe>
+                            </div>
+                            <div class="col">
+
+                            </div>
+                        </div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+
+                                </div>
+                                <div class="col align-middle">
+                                    <iframe frameborder="0" scrolling="no"
+                                        src="https://uci.credly.com/embed.html#/?member_badge_id=15438259" width="180"
+                                        height="230"></iframe>
+                                </div>
+                                <div class="col">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+
+                            </div>
+                            <div class="col align-middle">
+                                <iframe frameborder="0" scrolling="no"
+                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438272" width="180"
+                                    height="230"></iframe>
+                                <iframe frameborder="0" scrolling="no"
+                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438243" width="180"
+                                    height="230"></iframe>
+                            </div>
+                            <div class="col">
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-<!-- experience modal -->
+    <!-- experience modal -->
     <div class="modal fade" id="experience" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -80,10 +149,39 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    work history
-                </div>
-                <div class="modal-footer">
-                    test
+                    <div class="container">
+                        <div class="row card">
+                            <div class="col card-body">
+                                <h5 class="card-title">Rasin Canes</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Line Cook</h6>
+                                <p class="card-text">Stuff about position</p>
+                            </div>
+                        </div>
+                        <div class="row card">
+                            <div class="col card-body">
+                                <h5 class="card-title">Tillys, World of Jeans</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Administrative Assistant</h6>
+                                <p class="card-text">Stuff about position</p>
+                            </div>
+                        </div>
+                        <div class="row card">
+                            <div class="col card-body">
+                                <h5 class="card-title">Model Match</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Data Entry</h6>
+                                <p class="card-text">Stuff about position</p>
+                            </div>
+                        </div>
+                        <div class="row card">
+                            <div class="col card-body">
+                                <h5 class="card-title">19 Sports Bar & Grill</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Server</h6>
+                                <p class="card-text">Stuff about position</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        test
+                    </div>
                 </div>
             </div>
         </div>
