--- a/index.html
+++ b/index.html
@@ -8,230 +8,131 @@
     <link rel='icon' href='assets/images/mtn.JPG' type='image/x-icon' />
     <title>Reinwald Resume</title>
 
+
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <!-- header -->
-    <nav class="navbar fixed-top navbar-light shadow-sm p-3 mb-5 bg-white rounded text-muted">
-        <span class="h3 navbar-text">
-            Dillon Reinwald
-        </span>
-        <span class="h6 navbar-text text-right">
-            (949)923-8758
-            <i class="fas fa-grip-lines-vertical"></i>
-            dreinwaldmail@gmail.com
-        </span>
+     
+    <head>
+        <!-- header -->
+        <nav class="navbar fixed-top navbar-light shadow-sm p-3 mb-5 bg-white rounded text-muted">
+            <span class="h3 navbar-text">
+                Dillon Reinwald
+            </span>
+            <span class="h6 navbar-text text-right">
+                Full-Stack Web Developer
+                <i class="fas fa-grip-lines-vertical"></i>
+                (949)923-8758
+                <i class="fas fa-grip-lines-vertical"></i>
+                dreinwaldmail@gmail.com
+            </span>
 
-    </nav>
+        </nav>
 
-    <!-- navbar list -->
+    </head>
 
-    <div id="MainNav" class="container-fluid align-middle">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a data-toggle="modal" href="#aboutMe">About Me</a></li>
-            <li><a data-toggle="modal" href="#education">Education</a></li>
-            <li><a data-toggle="modal" href="#experience">Experience</a></li>
-        </ul>
-    </div>
+    <main>
+        <!-- navbar list -->
+        <div id="MainNav" class="container-fluid align-middle">
+            <ul>
+                <li><a href="#aboutMe">About Me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+            </ul>
 
-    <section>
-        <div id="stars"></div>
-        <div id="stars2"></div>
-        <div id="stars3"></div>
-
-    </section>
-    <!-- about me modal -->
-    <div class="modal fade" id="aboutMe" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">About Me</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    possible slideshow of pictures?
-                </div>
-                <div class="modal-footer">
-                    Text describing me
-                </div>
-            </div>
         </div>
-    </div>
-    <!-- education modal -->
-    <div class="modal fade" id="education" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">Education</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row card">
-                            <div class="col card-body">
-                                <h5 class="card-title">University of California, Irvine</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Certificate | 2018</h6>
-                                <p class="card-text">Full-Stack Web Development</p>
-                            </div>
+
+        <!-- about me -->
+        <div id="aboutMe" class="bd-example">
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel" data-slide-to="1"></li>
+                    <li data-target="#carousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                         </div>
-                        <div class="row card">
-                            <div class="col card-body">
-                                <h5 class="card-title">University of Colorado, Boulder</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Computer Science Major | 2012-2015</h6>
-                                <p class="card-text">Chi Psi Fraternity; Greek Week Chair 2015</p>
-                            </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <div class="container">
-                        <div class="row justify-content-md-center">
-                            <div class="col-md-auto">
-                                <h5 class="align-middle"> Certifcations</h5>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col"> </div>
-                            <div class="col align-middle">
-                                <iframe frameborder="0" scrolling="no"
-                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438213" width="180"
-                                    height="230"></iframe>
-                                <iframe frameborder="0" scrolling="no"
-                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438229" width="180"
-                                    height="230"></iframe>
-                            </div>
-                            <div class="col"></div>
-                        </div>
-                        <div class="row">
-                            <div class="col"></div>
-                            <div class="col align-middle">
-                                <iframe frameborder="0" scrolling="no"
-                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438259" width="180"
-                                    height="230"></iframe>
-                            </div>
-                            <div class="col"></div>
-                        </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
 
-                        <div class="row">
-                            <div class="col"></div>
-                            <div class="col align-middle">
-                                <iframe frameborder="0" scrolling="no"
-                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438272" width="180"
-                                    height="230"></iframe>
-                                <iframe frameborder="0" scrolling="no"
-                                    src="https://uci.credly.com/embed.html#/?member_badge_id=15438243" width="180"
-                                    height="230"></iframe>
-                            </div>
-                            <div class="col"></div>
-                        </div>
+        <!-- education  -->
+
+
+        <!-- experience  -->
+
+        <!-- projects  -->
+        <div class="container">
+            <div class="row">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- experience modal -->
-    <div class="modal fade" id="experience" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">Experience</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row card">
-                            <div class="col card-body">
-                                <h5 class="card-title">Rasin Canes</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Line Cook</h6>
-                                <p class="card-text">Stuff about position</p>
-                            </div>
-                        </div>
-                        <div class="row card">
-                            <div class="col card-body">
-                                <h5 class="card-title">Tillys, World of Jeans</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Administrative Assistant | March 2017 - March
-                                    2018 </h6>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Partnered closely with Senior Operations Manager to
-                                        ensure warehouse operations were met, and to research areas of improvement.
-                                    </li>
-                                    <li class="list-group-item">Maintained daily timesheets and personal information
-                                        records for over 300 Tilly’s Associates at the online and distribution
-                                        warehouses.
-                                    </li>
-                                    <li class="list-group-item">Updated and maintained Cost per Unit, Fiscal Forecast,
-                                        and Unit Per Hour reports.</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="row card">
-                            <div class="col card-body">
-                                <h5 class="card-title">Model Match</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Data Entry | Sept. 2016 - Feb. 2017</h6>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Created and maintained a database of 1000s prospective
-                                        clients, gathering contact and other necessary information.
-                                    </li>
-                                    <li class="list-group-item">Directly sourced potential clients of Bank and Mortgage
-                                        executives through independent research.
-                                    </li>
 
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="row card">
-                            <div class="col card-body">
-                                <h5 class="card-title">19 Sports Bar & Grill</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Server | March 2016 - Sept. 2016</h6>
-                                <li class="list-group-item">Greet and served guests with beverages and food in the
-                                    restaurant.
-                                </li>
-                                <li class="list-group-item">Properly informed guests of upcoming events in the
-                                    restaurant, golf course, and driving range to promote further guest engagement and
-                                    satisfaction.
-                                </li>
-                                <li class="list-group-item">Partnered on a team of 12 hospitality team members to
-                                    maintain orderly workstations as well as keep a sanitary dining area.
-                                </li>
-                            </div>
-                        </div>
-                        <div class="row card">
-                            <div class="col card-body">
-                                <h5 class="card-title">The Darkroom.com</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Production Crew | May 2015 - Dec. 2015</h6>
-                                <li class="list-group-item">Developed and processed film using specified machinery to
-                                    apply editing and color corrections to photos.
-                                </li>
-                                <li class="list-group-item">Used Adobe Photoshop and Illustrator to color correct and
-                                    remove imperfections for large prints and special items such as metallic prints and
-                                    calendars.
-                                </li>
-                                <li class="list-group-item">Rotated, maintained, and tracked stocked warehouse supplies.
-                                </li>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        test
-                    </div>
-                </div>
-            </div>
         </div>
-    </div>
+
+    </main>
+
+  
+
+
+
+
 
 
 
