center projects. added info. change colors

--- a/index.html
+++ b/index.html
@@ -111,38 +111,58 @@
 
         <!-- projects  -->
         <br>
-        <div class="row">
+        <div id="projects" class="row">
             <div class="col-sm-4 flip">
                 <div class="card text-center front">
-                    <div>FRONT 1</div>
-                </div>
-                <div class="card text-center back">
-                    <div class="card-body back-content">
-                        <h5 class="card-title">myo͞ozik</h5>
-                        <p class="card-text">A venue finding app for concerts in a user given area.</p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-sm-4 flip">
-                <div class="card text-center front">
-                    <div>FRONT 2</div>
+                    <i class="fas fa-dice fa-6x"></i>
+                    <div>Number Guess Game</div>
+                    <br>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Bootstrap</li>
+                        <li class="list-group-item">jQuery</li>
+                    </ul>
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
                         <h5 class="card-title">Number Guess Game</h5>
+                        <hr />
                         <p class="card-text">A simple game of adding random numbers to match a given number.</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4 flip">
                 <div class="card text-center front">
-                    <div>FRONT 3</div>
+                    <i class="fas fa-music fa-6x"></i>
+                    <div>myo͞ozik</div>
+                    <br>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">HTML & CSS</li>
+                        <li class="list-group-item">Javascript</li>
+                        <li class="list-group-item">Front End APIs</li>
+                    </ul>
+                </div>
+                <div class="card text-center back">
+                    <div class="card-body back-content">
+                        <h5 class="card-title">myo͞ozik</h5>
+                        <hr />
+                        <p class="card-text">A venue finding app for concerts in a user given area.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 flip">
+                <div class="card text-center front">
+                    <i class="icon fas fa-server fa-6x"></i>
+                    <div>MySQL-Bamazon</div>
+                    <br>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">MySQL</li>
+                        <li class="list-group-item">Javascript</li>
+                    </ul>
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
                         <h5 class="card-title">MySQL-Bamazon</h5>
+                        <hr />
                         <p class="card-text">A practice application to familiarize myself with MySQL </p>
                     </div>
                 </div>
