navbar id added. working on devicons sizing ul li stuff

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <!-- navbar list -->
         <div id="MainNav" class="container-fluid align-middle">
-            <ul>
+            <ul id="navBar">
                 <li><a href="#aboutMe">About Me</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -162,8 +162,8 @@
                     </div>
                 </div>
             </div>
-            <div id="devicons" class="container row">
-                <ul>
+            <div  class="container row">
+                <ul id="devicons">
                     <li>
                         <i class="devicon-javascript-plain"></i>
                     </li>
