footer and some small adjustments

--- a/index.html
+++ b/index.html
@@ -201,19 +201,6 @@
                         <i class="devicon-photoshop-line"></i>
                     </li>
                 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
         </div>
         <!-- education  -->
@@ -258,7 +245,7 @@
 
     <footer>
         <div class="footer is-centered">
-            <p>test test 123</p>
+            <p>Created, Developed, Cried over by Dillon Reinwald</p>
         </div>
     </footer>
 
