--- a/index.html
+++ b/index.html
@@ -162,43 +162,49 @@
                     </div>
                 </div>
             </div>
-            <div  class="container row">
+            <div class="container row">
                 <ul id="devicons">
                     <li>
-                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-react-original-wordmark"></i>
                     </li>
                     <li>
                         <i class="devicon-java-plain-wordmark"></i>
                     </li>
                     <li>
-                        <i class="devicon-jquery-plain-wordmark"></i>
+                        <i class="devicon-mongodb-plain-wordmark"></i>
                     </li>
                     <li>
                         <i class="devicon-mysql-plain-wordmark"></i>
                     </li>
                     <li>
+                        <i class="devicon-html5-plain-wordmark"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-javascript-plain"></i>
+
+                    </li>
+                    <!-- middle -->
+                    <li>
+                        <i class="devicon-photoshop-line"></i>
+
+                    </li>
+                    <li>
+                        <i class="devicon-bootstrap-plain"></i>
+
+                    </li>
+                    <li>
+                        <i class="devicon-css3-plain-wordmark"></i>
+                    <li>
+
                         <i class="devicon-nodejs-plain-wordmark"></i>
-                    </li>
-                    <li>
-                        <i class="devicon-react-original-wordmark"></i>
-                    </li>
-                    <li>
-                        <i class="devicon-mongodb-plain-wordmark"></i>
                     </li>
                     <li>
                         <i class="devicon-express-original-wordmark"></i>
                     </li>
                     <li>
-                        <i class="devicon-html5-plain-wordmark"></i>
-                    </li>
+                        <i class="devicon-jquery-plain-wordmark"></i></li>
                     <li>
-                        <i class="devicon-css3-plain-wordmark"></i>
-                    </li>
-                    <li>
-                        <i class="devicon-bootstrap-plain"></i>
-                    </li>
-                    <li>
-                        <i class="devicon-photoshop-line"></i>
+                        <i class="devicon-github-plain-wordmark"></i>
                     </li>
                 </ul>
             </div>
@@ -250,6 +256,8 @@
     </footer>
 
 
+
+    <i onclick="topFunction()" id="topButton" title="Go to top" class="far fa-arrow-alt-circle-up"></i>
 
 
 
