adjustment to skills and other minor details

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div id="MainNav" class="container-fluid align-middle">
             <ul id="navBar">
                 <li><a href="#aboutMe">About Me</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
 
         </div>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container row">
+            <div id="skills" class="container row">
                 <ul id="devicons">
                     <li>
                         <i class="devicon-react-original-wordmark"></i>
@@ -174,37 +174,38 @@
                         <i class="devicon-mongodb-plain-wordmark"></i>
                     </li>
                     <li>
-                        <i class="devicon-mysql-plain-wordmark"></i>
+                        <i class="devicon-jquery-plain-wordmark"></i>
                     </li>
+                </ul>
+            </div>
+
+            <div class="container row">
+                <ul id="devicons">
                     <li>
                         <i class="devicon-html5-plain-wordmark"></i>
                     </li>
                     <li>
                         <i class="devicon-javascript-plain"></i>
-
                     </li>
-                    <!-- middle -->
                     <li>
                         <i class="devicon-photoshop-line"></i>
-
-                    </li>
-                    <li>
-                        <i class="devicon-bootstrap-plain"></i>
-
                     </li>
                     <li>
                         <i class="devicon-css3-plain-wordmark"></i>
-                    <li>
+                    </li>
+                </ul>
+            </div>
 
+            <div class="container row">
+                <ul id="devicons">
+                    <li>
                         <i class="devicon-nodejs-plain-wordmark"></i>
                     </li>
                     <li>
                         <i class="devicon-express-original-wordmark"></i>
                     </li>
                     <li>
-                        <i class="devicon-jquery-plain-wordmark"></i></li>
-                    <li>
-                        <i class="devicon-github-plain-wordmark"></i>
+                        <i class="devicon-mysql-plain-wordmark"></i>
                     </li>
                 </ul>
             </div>
@@ -217,40 +218,18 @@
         <!-- contact -->
 
         <div id="contact" class="container-fluid row">
-            <form class="col-sm-6">
-                <div class="form">
-                    <div class="form-group ">
-                        <label for="inputName">Name</label>
-                        <input type="text" class="form-control" id="inputName" placeholder="First">
-                    </div>
-                    <div class="form-group ">
-                        <label for="inputLast">Last</label>
-                        <input type="text" class="form-control" id="inputLast" placeholder="Last">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputEmail">Email</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Emailme@gmail.com">
-                </div>
-
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea class="form-control" id="message" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-            <div class="col-sm-6">
-                <img src="./assets/images/view2.jpg" class="d-block w-100" alt="mtn">
-
+            <div class="card fluid">
+                <p>contact card test test</p>
+                <h6> Lets get in touch</h6>
             </div>
         </div>
-        </div>
+        
     </main>
 
 
 
     <footer>
-        <div class="footer is-centered">
+        <div class="footer navbar-light shadow-sm p-3 mb-5 bg-white rounded text-muted">
             <p>Created, Developed, Cried over by Dillon Reinwald</p>
         </div>
     </footer>
