--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="carousel-item">
                         <img src="./assets/images/snowboard.jpg" class="d-block w-100" alt="snowboard">
                         <div class="carousel-caption ">
-                            Proactive
+                            Active
                         </div>
 
                     </div>
