fixed and adjusted scroll up button. working on modal to display

--- a/index.html
+++ b/index.html
@@ -227,10 +227,16 @@
 
 
         <!-- project modals -->
-        <button type="button" class="btn btn-primary" href="./assets/modals/modal1.html">
+        <button type="button" class="projectModals btn btn-primary" href="./assets/modals/modal1.html">
             Modal button test
         </button>
 
+        <div id="theModal" class="modal fade text-center">
+            <div class="modal-dialog">
+              <div class="modal-content">
+              </div>
+            </div>
+          </div>
 
 
         <br>
