adjusting navbar stuff

--- a/index.html
+++ b/index.html
@@ -42,16 +42,35 @@
     </head>
 
     <main>
-        <!-- navbar list -->
-        <div id="MainNav" class="container-fluid align-middle">
-            <ul id="navBar">
-                <li><a href="#aboutMe">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <!-- <li><a href="#experience">Experience</a></li> -->
-                <li><a href="#skills">Skills</a></li>
-            </ul>
+        <header class="container-fluid row ">
+            <!-- navbar list -->
+            <div class="MainNav container-fluid align-middle col">
+                <ul id="navBar">
+                    <li><a href="#aboutMe">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <!-- <li><a href="#experience">Experience</a></li> -->
+                    <li><a href="#skills">Skills</a></li>
+                </ul>
 
-        </div>
+            </div>
+            <!-- picture -->
+            <div class="MainNav container-fluid col">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="./assets/images/forestMe.jpg" class="card-img" alt="me">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </header>
+
 
         <br>
         <br>
@@ -127,10 +146,10 @@
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
-                        <br/>
+                        <br />
                         <h5 class="card-title">Number Guess Game</h5>
                         <hr />
-                        <br/>
+                        <br />
                         <p class="card-text">A simple game of adding random numbers to match a given number.</p>
                     </div>
                 </div>
@@ -143,10 +162,10 @@
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
-                        <br/>
+                        <br />
                         <h5 class="card-title">myo͞ozik</h5>
                         <hr />
-                        <br/>
+                        <br />
                         <p class="card-text">A venue finding app for concerts in a user given area.</p>
                     </div>
                 </div>
@@ -159,10 +178,10 @@
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
-                        <br/>
+                        <br />
                         <h5 class="card-title">MySQL-Bamazon</h5>
                         <hr />
-                        <br/>
+                        <br />
                         <p class="card-text">A practice application to familiarize myself with MySQL </p>
                     </div>
                 </div>
@@ -233,10 +252,10 @@
 
         <div id="theModal" class="modal fade text-center">
             <div class="modal-dialog">
-              <div class="modal-content">
-              </div>
+                <div class="modal-content">
+                </div>
             </div>
-          </div>
+        </div>
 
 
         <br>
