skeleton for adout me

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
                     <div class="row no-gutters">
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title ">
+                                    About Me
+                                </h5>
+                                <p>
+                                    This is information about me place holder. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam similique itaque, maiores saepe deserunt eius. Facere excepturi incidunt aperiam, officia et quam? Nulla, quasi molestias? Veritatis reprehenderit nesciunt dolor dolores!
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-4">
